--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
     "framer-motion": "^4.1.17",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "leaflet": "^1.9.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.11",
